src/riot-rs-macros/tests/ui/spawner/missing_peripherals_param.stderr
error: `peripherals` macro parameter missing here ...
  --> tests/ui/spawner/missing_peripherals_param.rs:10:1
   |
10 | #[riot_rs::spawner(autostart)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `riot_rs::spawner` (in Nightly builds, run with -Z macro-backtrace for more info)

error: ... because this function has a second parameter
  --> tests/ui/spawner/missing_peripherals_param.rs:11:9
   |
11 | fn main(_spawner: Spawner, _peripherals: Peripherals) {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
